vm files added/